# land_cover_tracking

./: .flake8  .gitignore  .gitmodules  README.md  app.py  pyproject.toml
.github/workflows/: flake8.yml  unittests.yml
ai_engine/: infer.py
ai_engine/config/dataset/stats/: channels_stats_less_classes_more_snow.json
ai_engine/dataset/: __init__.py  data_augmentation.py  dataset_utils.py  patch_dataset.py  transforms.py
ai_engine/models/: __init__.py
ai_engine/models/hrnet/: hrnet.py
ai_engine/train_utils/: __init__.py  utils.py
ai_engine/utils/: infer_utils.py  np_utils.py  raster_utils.py  utilities.py  visualization_utils.py
ai_engine_wrapper/: ai_engine_wrapper.py
config/: default.py  default.yml
docker/: Dockerfile  requirements.txt  setup_docker.sh  setup_env.sh
tests/ai_engine_wrapper/: test_ai_engine_infer.py
utils/: ai_engine_wrapper.py  dash_utils.py  icons.py  io_utils.py  sentinel_api.py
