[tool.poetry]
name = "land_cover_tracking"
version = "0.1.0"
description = ""
authors = ["fmintus <fmintus@ridge-i.com>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "4.5.1.48"
torch = "1.8.1"
flask = "1.1.2"
requests = "2.25.1"
pillow = "8.2.0"
torchvision = "0.9.1"
matplotlib = "3.4.1"
pyyaml = "5.4.1"
dash = "1.20.0"
dash-leaflet = "^0.1.18"
flake8 = "^3.9.2"
pytest = "^6.2.5"
black = "^21.9b0"
sentinelhub = "^3.4.0"
yacs = "^0.1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
