[tool.poetry]
name = "land_cover_tracking"
version = "0.1.0"
description = ""
authors = ["fmintus <fmintus@ridge-i.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.9.0"
numpy = "1.21.1"
yacs = "0.1.8"
pandas = "1.3.1"
opencv-python = "4.5.3.56"
torchvision = "0.10.0"
pytest = "6.2.4"
black = "21.7b0"
flake8 = "3.9.2"
rasterio = "1.2.6"
comet-ml = "3.15.0"
torchmetrics = "0.5.0"
shapely = "1.7.1"
albumentations = "1.0.3"
sentinelhub = "*"
flask = "1.1.2"
requests = "2.25.1"
pillow = "8.2.0"
matplotlib = "3.4.1"
pyyaml = "5.4.1"
dash = "1.20.0"
dash-leaflet = "^0.1.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
